Bug 68616 - Pulseaudio daemon aborts when client tries to playback at less than 6Hz
Summary: Pulseaudio daemon aborts when client tries to playback at less than 6Hz
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Tanu Kaskinen
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
: 73621 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-27 16:14 UTC by Anssi Hannula
Modified: 2014-01-15 00:02 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Daemon debug log of git master with "pacat --rate=5" (8.14 KB, text/plain)
2013-08-27 16:14 UTC, Anssi Hannula
Details

Description Anssi Hannula 2013-08-27 16:14:57 UTC
Created attachment 84721 [details]
Daemon debug log of git master with "pacat --rate=5"

Pulseaudio daemon aborts when a client tries to play back audio at sample rate range 1Hz..5Hz.

The following commandline triggers the issue on 4.0 and on git master:
$ echo foobar | pacat --rate=1

The error is:
E: [null-sink] sink-input.c: Assertion 'tchunk.length > 0' failed at pulsecore/sink-input.c:933, function pa_sink_input_peek(). Aborting.

This happens on both null-sink and on alsa-sink.

Debug log is attached (null-sink case).
Comment 1 Tanu Kaskinen 2013-08-28 10:01:14 UTC
For some reason I thought PulseAudio doesn't support rates below 25 Hz, but now I can't find any reference to such magic number... Apparently I have imagined the whole thing.

Anyway, thanks for the report. I'm investigating the bug.
Comment 2 Tanu Kaskinen 2013-08-28 11:15:17 UTC
Patch sent to the mailing list: http://thread.gmane.org/gmane.comp.audio.pulseaudio.general/18120
Comment 3 Raymond 2013-08-28 12:22:15 UTC
http://freedesktop.org/software/pulseaudio/doxygen/sample.html

Sample Rates

PulseAudio supports any sample rate between 1 Hz and 192000 Hz.
Comment 4 Tanu Kaskinen 2013-10-10 16:06:30 UTC
The fix was committed already a while ago: http://cgit.freedesktop.org/pulseaudio/pulseaudio/commit/?id=d448ef04e9e8f42664b52347f43aabcf33e94bdc

Marking this bug now as fixed.
Comment 5 Tanu Kaskinen 2014-01-15 00:02:58 UTC
*** Bug 73621 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.